# Recurse into the "apps" subdirectory. This does not actually
# cause another cmake executable to run.


add_subdirectory (crop)
add_subdirectory (mse)
add_subdirectory (frt)
add_subdirectory (ifrt)
add_subdirectory (mt)
add_subdirectory (mt2frt)
add_subdirectory (fmt)
add_subdirectory (ifmt)
add_subdirectory (fmt_angles)
add_subdirectory (fmt_ghosts)
add_subdirectory (nrt)
add_subdirectory (inrt)
add_subdirectory (deghost)
